--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12.12"]
+        python-version: ["3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -31,4 +31,5 @@ jobs:
 
     - name: Run Smoke Test
       run: |
+        export PYTHONPATH=$PYTHONPATH:$(pwd)
         python -m tests.test_inference
