--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,4 +32,4 @@ jobs:
     - name: Run Smoke Test
       run: |
         export PYTHONPATH=$PYTHONPATH:$(pwd)
-        python tests.test_inference
+        python -m tests.test_inference
