--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,5 @@ jobs:
         pip install -r requirements.txt -q
         pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
 
-    - name: Run Smoke Test
-      run: |
-        export PYTHONPATH=$PYTHONPATH:$(pwd)
-        python tests.test_inference
+    - name: Run inference tests
+      run: python tests/test_inference.py
