--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,5 +28,10 @@ jobs:
         pip install -r requirements.txt -q
         pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
 
+    - name: Debug File System
+      run: |
+        pwd
+        ls -R
+        
     - name: Run inference tests
       run: python tests/test_inference.py
