--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,21 +17,23 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        cache: 'pip'
+
+    - name: Cache Python packages
+      id: cache-python 
+      uses: actions/cache@v4
+      with:
+        path: ${{ env.pythonLocation }}
+        key: ${{ runner.os }}-py${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
 
     - name: Install dependencies
+      if: steps.cache-python.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip -q
         pip install -r requirements.txt -q
-        pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+        pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu -q
 
-    - name: Debug File System
-      run: |
-        pwd
-        ls -R
-        
     - name: Run inference tests
-      run: python test/test_inference.py
+      run: python tests/test_inference.py
