--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip -q
         pip install -r requirements.txt -q
+        pip install -e .
         pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu -q
 
     - name: Run inference tests
-      run: python -m tests.test_inference
+      run: python -m test.test_inference
